# openglpaska

./: .gitignore  CMakeLists.txt
include/glad/: glad.h
src/: glad.c  main.cpp  shader.cpp  shader.hpp  timer.cpp  timer.hpp
src/shaders/: paska.frag  paska.vert  ripuli.frag
